# dice-lang

./: Cargo.toml  README.md
res/: example-full.dic  example.dic  example.die  invalid-dice-count.dic
src/: interpreter.rs  main.rs  parser.rs  token.rs
src/token_new/: ast.rs  chumsky.rs  mod.rs  tok.rs  tok_chumksy.rs
src/util_new/: mod.rs
