[package]
name = "dice-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.4.1"
chumsky = { version = "1.0.0-alpha.7", features = ["label"] }
logos = "0.14.1"

[dev-dependencies]
paste = "1.0.15"
rstest = "0.22.0"
